GM-2561 fix spacing
- add more space between ctas and images
- reduce spacing between rows
- fix tan boxes on sides of clearing divs between rows
- remove redundant facebook sass

--- a/app/assets/stylesheets/base/_tools.scss
+++ b/app/assets/stylesheets/base/_tools.scss
@@ -114,6 +114,10 @@
   text-align: left !important;
 }
 
+.text-center {
+  text-align: center !important;
+}
+
 .text-right {
   text-align: right !important;
 }
