--- a/app/assets/stylesheets/components/_testimonial.scss
+++ b/app/assets/stylesheets/components/_testimonial.scss
@@ -13,7 +13,7 @@
     position: relative;
     display: block;
     width: 100%;
-    margin-bottom: $b-space-m;
+    margin-bottom: 25px;
 
     img {
       display: block;
@@ -32,7 +32,7 @@
     max-width: 100%;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: $b-space-m;
+    margin-bottom: 25px;
   }
 
 }
